Registered services. Commit before creating db.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Data Source=QTD-PAVILION\\SQLEXPRESS;Initial Catalog=AmytDbV2;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
