API can now be launched successfully, some APIs need to be recheck.

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=QTD-PAVILION\\SQLEXPRESS;Initial Catalog=AmytDbV2;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=QTD-PAVILION\\SQLEXPRESS;Initial Catalog=AmytDbV2;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "AllowedHosts": "*"
 }
